# escapement

./: CLAUDE.md  README.md  SKILLS.md  pyproject.toml
src/escapement/: __init__.py  clock.py  epoch.py
tests/: test_clock.py  test_epoch.py  test_properties.py
